--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+extract.markers=D:\\JavaProjects\\dipl\\server\\src\\main\\resources\\reasoningTemplates.txt
+extract.signs=D:\\JavaProjects\\dipl\\server\\src\\main\\resources\\signs.txt
+extract.script=D:\\JavaProjects\\dipl\\server\\src\\main\\python\\text_extractor.py
